--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -2,11 +2,11 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/photo_list"
     android:name="com.pallaw.firebasegallary.PhotoFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-    tools:context="com.pallaw.firebasegallery.GalleryFragment"
     app:spanCount="2"
+    tools:context="com.pallaw.firebasegallery.ui.gallery.GalleryFragment"
     tools:listitem="@layout/item_photo" />
