--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/GallaryFragment"
-        android:name="com.pallaw.firebasegallery.GalleryFragment"
+        android:name="com.pallaw.firebasegallery.ui.gallery.GalleryFragment"
         android:label="@string/gallary_fragment_label"
         tools:layout="@layout/fragment_gallery" />
 </navigation>
