Shared viewmodel and fetching photos from server

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,5 +8,5 @@
     android:layout_height="match_parent"
     app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
     app:spanCount="2"
-    tools:context="com.pallaw.firebasegallery.ui.gallery.GalleryFragment"
+    tools:context="com.pallaw.firebasegallery.ui.gallery.GalleryGridFragment"
     tools:listitem="@layout/item_photo" />
