Added zoom fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,5 +10,18 @@
         android:id="@+id/GallaryFragment"
         android:name="com.pallaw.firebasegallery.ui.gallery.GalleryGridFragment"
         android:label="@string/gallary_fragment_label"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_gallery" >
+        <action
+            android:id="@+id/toGalleryZoom"
+            app:destination="@id/galleryZoom" />
+    </fragment>
+    <fragment
+        android:id="@+id/galleryZoom"
+        android:name="com.pallaw.firebasegallery.GalleryZoomFragment"
+        android:label="fragment_gallery_zoom"
+        tools:layout="@layout/fragment_gallery_zoom" >
+        <argument
+            android:name="photo"
+            app:argType="com.pallaw.firebasegallery.data.resources.Photo" />
+    </fragment>
 </navigation>
