--- a/app/src/main/res/layout/fragment_gallery_zoom.xml
+++ b/app/src/main/res/layout/fragment_gallery_zoom.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".GalleryZoomFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <com.github.chrisbanes.photoview.PhotoView
+        android:id="@+id/photo_zoom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:src="@drawable/ic_loading" />
 
 </FrameLayout>
